Text visibility is bad in testimonials section. Need to change the text color. #226 fixed

--- a/src/pages/home_page/_HomePage.css
+++ b/src/pages/home_page/_HomePage.css
@@ -97,8 +97,9 @@ section {
 
 .testimonialCard:hover {
   transform: translateY(-5px);
-  background-color: #d2d8ff;
+  background-color:black;
   color: #000;
+  
 }
 
 /* Styling for testimonial content */
@@ -106,12 +107,14 @@ section {
   font-style: italic;
   text-align: center;
   margin-top: 16px;
+  color: white;
 }
 
 /* Styling for testimonial names */
 .testimonialName {
   font-weight: bold;
   margin-top: 16px;
+  color: white;
 }
 
 /* Add this media query at the end of your CSS file to adjust styles for mobile screens */
